# introduction_ucp_with_mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  agentcore_add_target.py  mcp_ucp_client.py  pyproject.toml
agentcore-mcp/: main.py  requirements.txt
infra/: cdk.context.json  package-lock.json
infra/lib/: infra-stack.ts
src/: constants.py  main.py  mcp_ucp_server.py  store.py
src/data/: ucp.json
tests/: test_mcp_ucp_server.py
