[project]
name = "ucp-introduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli,fastmcp]>=1.25.0",
     "pydantic[email]>=2.12.3",
    "ucp-sdk",
    "uvicorn>=0.34.0",
    "starlette>=0.45.3",
]
[dependency-groups]
dev = [
    "ruff>=0.14.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
ucp-sdk = { path = "./python-sdk", editable = true }
